package data

data class Cell<T>(
    var data: Data<T>
)
