package data

data class Data<T>(
    var data: T
)
