package view

import data.Cell

class Column<T>(
    var columns: List<Cell<T>>
)
