package view

import data.Cell

class Row<T>(
    var rows: List<Cell<T>>
)
