package writer

interface Writer {
    fun write(): String
}
